<resources>
    <string name="app_name">Bmr</string>
    <string name="your_bmr_is">Your BMR is</string>
    <string name="bmr_title">my title</string>
    <string name="ok">OK</string>
    <string name="gender">Gender (Man:1, Woman:0)</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="calculate_bmr">CALCULATE BMR</string>
    <string name="info">Info</string>
</resources>
